--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
   display: flex;
   font-family: $font-family;
   flex-direction: column;
+  background-image: linear-gradient(to bottom right, #0b4947, #ffa64d);
 
   @media screen and (min-width: 768px) {
     flex-direction: row;
