--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,9 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@100&display=swap");
 
-$base-spacing: 5px;
-
 $font-family: "Azeret Mono", monospace;
 
-$primary-color: #d69d30;
+$color-primary: #d69d30;
 
-$primary-background-color: rgba(76, 26, 76, 0.8);
+$background-color-primary: rgb(87, 44, 87);
