--- a/src/containers/Main/Main.scss
+++ b/src/containers/Main/Main.scss
@@ -2,11 +2,21 @@
 
 .main {
   width: 100vw;
-  padding: 1rem;
+  padding: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
+
   @media screen and (min-width: 768px) {
     width: 80vw;
+  }
+
+  &__beer-cards {
+    max-width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 300px);
+    grid-gap: 0.5rem;
+    justify-content: space-evenly;
+    padding: 0.2rem;
   }
 }
