--- a/src/containers/Main/Main.scss
+++ b/src/containers/Main/Main.scss
@@ -12,11 +12,17 @@
   }
 
   &__beer-cards {
-    max-width: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 300px);
-    grid-gap: 0.5rem;
-    justify-content: space-evenly;
-    padding: 0.2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    align-items: center;
+    @media screen and (min-width: 768px) {
+      max-width: 100%;
+      display: grid;
+      grid-template-columns: repeat(auto-fill, 300px);
+      grid-gap: 0.5rem;
+      justify-content: space-evenly;
+      padding: 0.2rem;
+    }
   }
 }
