--- a/src/containers/Main/Main.scss
+++ b/src/containers/Main/Main.scss
@@ -19,10 +19,10 @@
     @media screen and (min-width: 768px) {
       max-width: 100%;
       display: grid;
-      grid-template-columns: repeat(auto-fill, 300px);
-      grid-gap: 0.5rem;
+      grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+      grid-gap: 1rem;
       justify-content: space-evenly;
-      padding: 0.2rem;
+      padding: 1rem;
     }
   }
 }
