changed colours and imporved trimming of description for beer cards

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -2,6 +2,18 @@
 
 $font-family: "Azeret Mono", monospace;
 
+// $color-primary: #d69d30;
+
+// $background-color-primary: #572c57;
+
+// $gradient-color-start: #0b4947;
+
+// $gradient-color-finish: #ffa64d;
+
 $color-primary: #d69d30;
 
-$background-color-primary: rgb(87, 44, 87);
+$background-color-primary: rgba(0, 0, 0, 0.571);
+
+$gradient-color-start: #ffa64d;
+
+$gradient-color-finish: rgb(220, 213, 164);
