--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,11 @@
   display: flex;
   font-family: $font-family;
   flex-direction: column;
-  background-image: linear-gradient(to bottom right, #0b4947, #ffa64d);
+  background-image: linear-gradient(
+    to bottom,
+    $gradient-color-start,
+    $gradient-color-finish
+  );
 
   @media screen and (min-width: 768px) {
     flex-direction: row;
