--- a/src/containers/Main/Main.scss
+++ b/src/containers/Main/Main.scss
@@ -7,6 +7,9 @@
   align-items: center;
   justify-content: center;
 
+  @media screen and (max-width: 768px) and (orientation: landscape) {
+    width: 80vw;
+  }
   @media screen and (min-width: 768px) {
     width: 80vw;
   }
