--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -17,7 +17,7 @@
   justify-content: center;
   text-align: center;
   @media screen and (max-width: 768px) and (orientation: landscape) {
-    width: 20vw;
+    width: 20vmax;
     height: 100vh;
     background-image: none;
     background-color: inherit;
