--- a/src/App.scss
+++ b/src/App.scss
@@ -9,7 +9,9 @@
     $gradient-color-start,
     $gradient-color-finish
   );
-
+  @media screen and (max-width: 768px) and (orientation: landscape) {
+    flex-direction: row;
+  }
   @media screen and (min-width: 768px) {
     flex-direction: row;
   }
