--- a/src/components/BeerCard/BeerCard.scss
+++ b/src/components/BeerCard/BeerCard.scss
@@ -12,6 +12,9 @@
   color: black;
   border: 1px solid black;
   cursor: pointer;
+  @media screen and (max-width: 768px) and (orientation: landscape) {
+    height: 95vmin;
+  }
   @media screen and (min-width: 768px) {
     min-width: 15rem;
   }
