--- a/src/components/BeerCard/BeerCard.scss
+++ b/src/components/BeerCard/BeerCard.scss
@@ -11,7 +11,6 @@
   border-radius: 0.5rem;
   color: black;
   border: 1px solid black;
-  cursor: pointer;
   @media screen and (max-width: 768px) and (orientation: landscape) {
     height: 95vmin;
   }
@@ -37,6 +36,7 @@
   &__image {
     height: 50%;
     margin-bottom: 0.4rem;
+    cursor: pointer;
   }
 
   &__name {
@@ -70,9 +70,18 @@
     font-size: 0.875rem;
     text-align: center;
     line-height: 150%;
+    margin-bottom: 0.8rem;
   }
 
   &__pairing {
     margin-bottom: 0.2rem;
+  }
+
+  &__pairings-header {
+    text-align: center;
+    cursor: pointer;
+    &:hover {
+      text-shadow: 2px 2px 2px $gradient-color-start;
+    }
   }
 }
