--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -17,26 +17,30 @@
   justify-content: center;
   text-align: center;
   @media screen and (max-width: 768px) and (orientation: landscape) {
-    max-width: 30vmax;
+    max-width: 40vmax;
     height: 100vmin;
     background-image: none;
     background-color: inherit;
-    align-items: flex-start;
     justify-content: flex-start;
   }
   @media screen and (min-width: 768px) {
-    width: 20vw;
+    max-width: 28vw;
+    width: auto;
     height: 100vh;
     background-image: none;
     background-color: inherit;
+    justify-content: flex-start;
   }
   &__heading {
     font-size: 2rem;
     line-height: 150%;
     text-shadow: 2px 2px 2px white;
     @media screen and (max-width: 768px) and (orientation: landscape) {
-      font-size: 1.4rem;
-      line-height: 150%;
+      font-size: 1.6rem;
+      margin: 0.6rem 0;
+    }
+    @media screen and (min-width: 768px) {
+      margin: 1rem 0;
     }
   }
   &__subheading {
@@ -44,8 +48,13 @@
     line-height: 150%;
     text-shadow: 2px 2px 2px white;
     @media screen and (max-width: 768px) and (orientation: landscape) {
-      font-size: 1.1rem;
-      line-height: 150%;
+      font-size: 1.3rem;
+      margin-top: 0.6rem;
+      margin-bottom: 0.8rem;
+    }
+    @media screen and (min-width: 768px) {
+      margin-top: 1rem;
+      margin-bottom: 1.2rem;
     }
   }
   &__separator {
