--- a/src/containers/Main/Main.scss
+++ b/src/containers/Main/Main.scss
@@ -7,9 +7,9 @@
   align-items: center;
   justify-content: center;
 
-  @media screen and (min-width: 768px) {
-    width: 80vw;
-  }
+  // @media screen and (min-width: 768px) {
+  //   width: 80vw;
+  // }
 
   &__beer-cards {
     display: flex;
