--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -2,18 +2,12 @@
 
 $font-family: "Azeret Mono", monospace;
 
-// $color-primary: #d69d30;
-
-// $background-color-primary: #572c57;
-
-// $gradient-color-start: #0b4947;
-
-// $gradient-color-finish: #ffa64d;
-
-$color-primary: #d69d30;
-
-$background-color-primary: rgba(0, 0, 0, 0.571);
-
 $gradient-color-start: #ffa64d;
 
-$gradient-color-finish: rgb(220, 213, 164);
+$gradient-color-finish: #dcd6a4;
+
+$color-shadow: white;
+
+$color-text: black;
+
+$color-card: rgba(210, 206, 206, 0.488);
