--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -7,10 +7,10 @@
     $gradient-color-start,
     $gradient-color-finish
   );
-  color: black;
+  color: $color-text;
   position: sticky;
   top: 0;
-  padding: 0.8rem 1.2rem;
+  padding: 0.8rem 0.8rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,7 +34,7 @@
   &__heading {
     font-size: 2rem;
     line-height: 150%;
-    text-shadow: 2px 2px 2px white;
+    text-shadow: 0.125rem 0.125rem 0.125rem $color-shadow;
     @media screen and (max-width: 768px) and (orientation: landscape) {
       font-size: 1.6rem;
       margin: 0.6rem 0;
@@ -46,7 +46,7 @@
   &__subheading {
     font-size: 1.5rem;
     line-height: 150%;
-    text-shadow: 2px 2px 2px white;
+    text-shadow: 0.125rem 0.125rem 0.125rem $color-shadow;
     @media screen and (max-width: 768px) and (orientation: landscape) {
       font-size: 1.3rem;
       margin-top: 0.6rem;
@@ -58,12 +58,12 @@
     }
   }
   &__separator {
-    margin: 0.8rem 0;
+    margin: 0.8rem 0 1.8rem 0;
     width: 12rem;
-    background-color: black;
+    background-color: $color-text;
     border: none;
     height: 0.1rem;
-    box-shadow: 2px 2px 2px white;
+    box-shadow: 0.125rem 0.125rem 0.125rem $color-shadow;
     @media screen and (max-width: 768px) and (orientation: landscape) {
       width: 8rem;
     }
