--- a/src/containers/FilterContainer/FilterContainer.scss
+++ b/src/containers/FilterContainer/FilterContainer.scss
@@ -2,7 +2,8 @@
   margin-bottom: 1rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-content: stretch;
+  width: 90%;
 
   &__heading {
     margin-bottom: 1.2rem;
