--- a/src/containers/Main/Main.scss
+++ b/src/containers/Main/Main.scss
@@ -4,6 +4,7 @@
   width: 100vw;
   padding: 0.5rem;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 
