--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -91,15 +91,22 @@
     }
   }
 
-  &__filters--hidden {
-    height: 0rem;
-    overflow: hidden;
+  &__filters {
+    width: 90%;
     @media screen and (min-width: 768px) {
+      width: 100%;
+    }
+
+    &--hidden {
+      height: 0rem;
+      overflow: hidden;
+      @media screen and (min-width: 768px) {
+        height: auto;
+      }
+    }
+
+    &--visible {
       height: auto;
     }
-  }
-
-  &__filters--visible {
-    height: auto;
   }
 }
