--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@100&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
 
-$font-family: "Azeret Mono", monospace;
+$font-family: "Ubuntu", sans-serif;
 
 $gradient-color-start: #ffa64d;
 
@@ -11,3 +11,9 @@ $color-shadow: white;
 $color-text: black;
 
 $color-card: rgba(210, 206, 206, 0.488);
+
+//////////////
+
+$color-black: #232526;
+$color-white: #f7f7f7;
+$color-grey: #e4e4e4;
