--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -2,12 +2,13 @@
 
 .header {
   width: 100vw;
-  background-image: linear-gradient(
-    to top,
-    $gradient-color-start,
-    $gradient-color-finish
-  );
-  color: $color-text;
+  // background-image: linear-gradient(
+  //   to top,
+  //   $gradient-color-start,
+  //   $gradient-color-finish
+  // );
+  background-color: $color-black;
+  color: $color-white;
   position: sticky;
   top: 0;
   padding: 0.8rem 0.8rem;
@@ -20,22 +21,17 @@
     position: static;
     max-width: 40vmax;
     min-height: 100vmin;
-    background-image: none;
-    background-color: inherit;
     justify-content: flex-start;
   }
   @media screen and (min-width: 768px) {
     max-width: 28vw;
     width: auto;
     height: 100vh;
-    background-image: none;
-    background-color: inherit;
     justify-content: flex-start;
   }
   &__heading {
     font-size: 2rem;
     line-height: 150%;
-    text-shadow: 0.125rem 0.125rem 0.125rem $color-shadow;
     @media screen and (max-width: 768px) and (orientation: landscape) {
       font-size: 1.6rem;
       margin: 0.6rem 0;
@@ -47,26 +43,14 @@
   &__subheading {
     font-size: 1.5rem;
     line-height: 150%;
-    text-shadow: 0.125rem 0.125rem 0.125rem $color-shadow;
+    margin-bottom: 0.8rem;
     @media screen and (max-width: 768px) and (orientation: landscape) {
       font-size: 1.3rem;
       margin-top: 0.6rem;
-      margin-bottom: 0.8rem;
     }
     @media screen and (min-width: 768px) {
       margin-top: 1rem;
       margin-bottom: 1.2rem;
-    }
-  }
-  &__separator {
-    margin: 0.8rem 0 1.8rem 0;
-    width: 12rem;
-    background-color: $color-text;
-    border: none;
-    height: 0.1rem;
-    box-shadow: 0.125rem 0.125rem 0.125rem $color-shadow;
-    @media screen and (max-width: 768px) and (orientation: landscape) {
-      width: 8rem;
     }
   }
 
@@ -76,7 +60,7 @@
     border: none;
     font-family: $font-family;
     font-size: 1rem;
-    margin-bottom: 1rem;
+    color: $color-white;
     @media screen and (min-width: 768px) {
       display: none;
     }
@@ -84,11 +68,6 @@
 
   &__icon {
     padding-left: 0.5rem;
-    background-color: inherit;
-    border: none;
-    @media screen and (min-width: 768px) {
-      display: none;
-    }
   }
 
   &__filters {
@@ -102,11 +81,13 @@
       overflow: hidden;
       @media screen and (min-width: 768px) {
         height: auto;
+        margin-top: 2rem;
       }
     }
 
     &--visible {
       height: auto;
+      margin-top: 1rem;
     }
   }
 }
