--- a/src/containers/Main/Main.scss
+++ b/src/containers/Main/Main.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: $color-grey;
 
   &__beer-cards {
     display: flex;
