--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -24,10 +24,13 @@
     justify-content: flex-start;
   }
   @media screen and (min-width: 768px) {
-    max-width: 28vw;
-    width: auto;
+    width: 40vw;
     height: 100vh;
     justify-content: flex-start;
+    padding: 1rem 1rem;
+  }
+  @media screen and (min-width: 1024px) {
+    max-width: 18rem;
   }
   &__heading {
     font-size: 2rem;
@@ -38,19 +41,6 @@
     }
     @media screen and (min-width: 768px) {
       margin: 1rem 0;
-    }
-  }
-  &__subheading {
-    font-size: 1.5rem;
-    line-height: 150%;
-    margin-bottom: 0.8rem;
-    @media screen and (max-width: 768px) and (orientation: landscape) {
-      font-size: 1.3rem;
-      margin-top: 0.6rem;
-    }
-    @media screen and (min-width: 768px) {
-      margin-top: 1rem;
-      margin-bottom: 1.2rem;
     }
   }
 
