--- a/src/components/BeerCard/BeerCard.scss
+++ b/src/components/BeerCard/BeerCard.scss
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 25rem;
+  max-height: 25rem;
   max-width: 25rem;
   background-color: $color-white;
   border-radius: 0.5rem;
@@ -14,7 +14,7 @@
     height: 95vmin;
   }
   @media screen and (min-width: 768px) {
-    min-width: 15rem;
+    // max-height: 25rem;
   }
 
   &__content-container {
@@ -35,7 +35,7 @@
   &__image {
     height: 50%;
     margin-bottom: 0.4rem;
-    cursor: pointer;
+    // cursor: pointer;
   }
 
   &__name {
@@ -76,8 +76,8 @@
     margin-bottom: 0.2rem;
   }
 
-  &__more-info {
-    text-align: center;
-    cursor: pointer;
-  }
+  // &__more-info {
+  //   text-align: center;
+  //   cursor: pointer;
+  // }
 }
