--- a/src/containers/CardContainer/CardContainer.scss
+++ b/src/containers/CardContainer/CardContainer.scss
@@ -4,12 +4,16 @@
   gap: 1rem;
 
   @media screen and (min-width: 768px) {
-    max-height: 100%;
-    max-width: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-    grid-gap: 1rem;
-    justify-content: space-evenly;
-    padding: 1rem;
+    grid-template-columns: 1fr 1fr;
+  }
+  @media screen and (min-width: 1024px) {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  @media screen and (min-width: 1440px) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+
+  @media screen and (min-width: 2560px) {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   }
 }
