changed pageSelector styling

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -2,18 +2,7 @@
 
 $font-family: "Ubuntu", sans-serif;
 
-$gradient-color-start: #ffa64d;
-
-$gradient-color-finish: #dcd6a4;
-
-$color-shadow: white;
-
-$color-text: black;
-
-$color-card: rgba(210, 206, 206, 0.488);
-
-//////////////
-
 $color-black: #232526;
 $color-white: #f7f7f7;
 $color-grey: #e4e4e4;
+$color-gold: #f5a51b7b;
