--- a/src/components/BeerCard/BeerCard.scss
+++ b/src/components/BeerCard/BeerCard.scss
@@ -10,11 +10,12 @@
   border-radius: 0.5rem;
   color: $color-black;
   box-shadow: 0.2rem 0.25rem 0.5rem -0.25rem;
+  &:hover {
+    background-color: $color-gold;
+  }
+
   @media screen and (max-width: 768px) and (orientation: landscape) {
     height: 95vmin;
-  }
-  @media screen and (min-width: 768px) {
-    // max-height: 25rem;
   }
 
   &__content-container {
