changed searchBox styles

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -5,4 +5,5 @@ $font-family: "Ubuntu", sans-serif;
 $color-black: #232526;
 $color-white: #f7f7f7;
 $color-grey: #e4e4e4;
+$color-placeholder: #f7f7f769;
 $color-gold: #f5a51b7b;
