--- a/src/components/SearchBox/SearchBox.scss
+++ b/src/components/SearchBox/SearchBox.scss
@@ -6,6 +6,7 @@
   margin-bottom: 1.4rem;
 
   &__input {
+    margin-right: 0.5rem;
     border: none;
     border-bottom: 0.063rem solid $color-white;
     background-color: transparent;
@@ -13,7 +14,7 @@
     color: $color-white;
     &::placeholder {
       font-family: $font-family;
-      color: $color-white;
+      color: $color-placeholder;
     }
   }
 }
