changed flex styling of main

--- a/src/components/SearchBox/SearchBox.scss
+++ b/src/components/SearchBox/SearchBox.scss
@@ -12,6 +12,7 @@
     background-color: transparent;
     width: 100%;
     color: $color-white;
+    padding: 0 0.2rem;
     &::placeholder {
       font-family: $font-family;
       color: $color-placeholder;
