--- a/src/containers/Main/Main.scss
+++ b/src/containers/Main/Main.scss
@@ -5,6 +5,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   background-color: $color-grey;
 }
